--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_default">#eee</color>
+    <color name="color_default">#212121</color>
 
-    <color name="colorPrimary">#ff5722</color>
-    <color name="colorPrimaryDark">#b23c17</color>
-    <color name="colorAccent">#b23c17</color>
+    <color name="colorPrimary">#0c103d</color>
+    <color name="colorPrimaryDark">#080b2a</color>
+    <color name="colorAccent">#808080</color>
 
-    <color name="button_decode">#4caf50</color>
+    <color name="app_label">#eeeeee</color>
+    <color name="app_back">#DCDCE7</color>
+    <color name="app_text">#eeeeee</color>
+
+    <color name="output_backgroud">#800C103D</color>
+
+    <color name="button_decode">#f1f1f1</color>
     <color name="button_clear">#f44336</color>
-    <color name="button_play">#ffca28</color>
-    <color name="button_stop">#ffd453</color>
+    <color name="button_audio_enabled">#0c103d</color>
+    <color name="button_audio_disabled">#3c3f63</color>
+
+    <integer-array name="androidcolors">
+        <item>@color/button_audio_enabled</item>
+        <item>@color/button_audio_disabled</item>
+    </integer-array>
+
 </resources>
